<?xml version="1.0"?>
<package format="2">
  <name>pmb3_2dnav</name>
  <version>0.0.10</version>
  <description>PMB3-specific launch files needed to run
    navigation on the PMB3 robot.</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <author email="jose.garcia@pal-robotics.com">Jose Carlos Garcia</author>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Carlos Garcia</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pmb3_rgbd_sensors</exec_depend>
  <exec_depend>pmb3_laser_sensors</exec_depend>
  <exec_depend>pmb3_maps</exec_depend>
  <exec_depend>pal_navigation_sm</exec_depend>
  <exec_depend>pal_navigation_cfg_pmb3</exec_depend>
</package>