<?xml version="1.0"?>
<package format="3">
  <name>pmb3_laser_sensors</name>
  <version>0.0.1</version>
  <description>PMB3-specific RGBD sensors launch and config files.</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Garcia</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO -->
  <!-- <exec_depend>openni2_launch</exec_depend>
  <exec_depend>pal-orbbec-openni2</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">uvc_camera</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">libuvc_camera</exec_depend>
  <exec_depend>pal_pcl</exec_depend>
  <exec_depend>pal_usb_utils</exec_depend>
  <exec_depend condition="$PAL_DISTRO > 0">node_doctor</exec_depend> -->

</package>
