<?xml version="1.0"?>
<package format="3">
  <name>pmb3_laser_sensors</name>
  <version>0.0.2</version>
  <description>PMB3-specific RGBD sensors launch and config files.</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Garcia</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO -->
  <!-- <exec_depend>hokuyo_node</exec_depend> -->
  <exec_depend>sick_tim</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>pal_filters</exec_depend>

</package>
