<?xml version="1.0"?>
<package format="3">
  <name>pmb3_laser_sensors</name>
  <version>0.0.8</version>
  <description>PMB3-specific RGBD sensors launch and config files.</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <author email="jose.garcia@pal-robotics.com">Jose Garcia</author>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Garcia</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>laser_filters</exec_depend>
  <exec_depend>pal_filters</exec_depend>
  <exec_depend>sick_safetyscanners</exec_depend>
  <exec_depend>sick_tim</exec_depend>
  <exec_depend>ydlidar_ros_driver</exec_depend>

</package>
