<?xml version="1.0"?>
<package format="2">
  <name>pmb3_maps</name>
  <version>0.0.1</version>
  <description>PMB3-specific maps and launch files.</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Garcia</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>