<?xml version="1.0"?>
<package format="2">
  <name>pmb3_navigation</name>
  <version>0.0.2</version>
  <description>PMB3 navigation metapackage</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Garcia</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pmb3_2dnav</exec_depend>
  <exec_depend>pmb3_maps</exec_depend>
  <exec_depend>pmb3_laser_sensors</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>