<?xml version="1.0"?>
<package format="3">
  <name>pmb3_rgbd_sensors</name>
  <version>0.0.5</version>
  <description>PMB3-specific RGBD sensors launch and config files.</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <author email="jose.garcia@pal-robotics.com">Jose Carlos Garcia</author>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Garcia</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pal_usb_utils</exec_depend>
  <exec_depend>pal_pcl</exec_depend>
  <exec_depend>node_doctor</exec_depend>

  <exec_depend>librealsense2</exec_depend>
  <exec_depend>librealsense2-utils</exec_depend>

  <exec_depend>realsense2_camera</exec_depend>

</package>